--- a/assets/restart_popup.css
+++ b/assets/restart_popup.css
@@ -28,6 +28,10 @@ Grid {
 
 #ok {
     column-span: 2;
-    width: 20;
-    content-align: center middle;
+    width: 100%;
+}
+
+Button.disabled {
+    background: gray;
+    color: darkgray;
 }
