mounted firmware update module onto program. Need to work on batch queue, RDU/Unity option, error handling.

--- a/Project/assets/editscreen.css
+++ b/Project/assets/editscreen.css
@@ -38,7 +38,7 @@
 }
 
 /* Style for the batch and config path inputs */
-#path-batch, #path-config {
+#path-batch, #path-config, #path-firmware {
     column-span: 2;
     background: darkblue;
     border: solid white;
