--- a/Project/assets/restart_popup.css
+++ b/Project/assets/restart_popup.css
@@ -16,6 +16,7 @@ Grid {
     width: 60;
     height: 11;
     border: thick white;
+    content-align: center middle;
     background: darkblue;
 }
 
