--- a/Project/assets/batchops.css
+++ b/Project/assets/batchops.css
@@ -57,19 +57,14 @@ ListItem {
     width: 100%;
 }
 
-.buttons-container > * {
-    margin-right: 1;
-    margin-left: 1;
-    margin-bottom: 1;
-}
 
 #mode-select {
-    margin-left: 30;
-    margin-bottom: 1;
-    min-width: 20;
-    width:20;
+    min-width: 16;
+    padding-bottom: 1;
     background: darkblue;
-    height: auto;    
+    border: none;
+    content-align: center middle;
+    height: auto;  
 }
 
 Button {
