--- a/Project/assets/opts_screen.css
+++ b/Project/assets/opts_screen.css
@@ -29,6 +29,10 @@ OptionList {
     height: 3;
 }
 
+#help-button {
+    margin-left: 70;
+}
+
 Button {
     border: none;
     background: darkblue;
