new features and updates for user action checks

--- a/Project/assets/base_screen.css
+++ b/Project/assets/base_screen.css
@@ -86,3 +86,8 @@ ToggleButton {
     align: center middle;
     column-span: 1;
 }
+
+#quit-container {
+    align: center middle;
+    column-span: 1;  
+}
