--- a/Project/assets/editscreen.css
+++ b/Project/assets/editscreen.css
@@ -54,7 +54,7 @@
 
 /* OK button styling */
 #ok-button {
-    margin-top: 1;
+    /* margin-top: 1; */
     column-span: 2;
     min-width: 10;
     width: 10;
